# crate-universe-sample

./: BUILD  Cargo.toml  README.md  WORKSPACE  WORKSPACE.bazel
cargo/: crates.bzl
hello-world/: BUILD.bazel  Cargo.toml
hello-world/src/: main.rs
utils/: BUILD.bazel  Cargo.toml
utils/src/: lib.rs
