[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world"
path = "src/main.rs"

[dependencies]

[package.metadata.raze]
workspace_path = "//cargo"
targets = [
	"x86_64-unknown-linux-gnu"
]
output_buildfile_suffix = "BUILD.bazel"
gen_workspace_prefix = "hello_world"
genmode = "Remote"
package_aliases_dir = "cargo"
