[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14.16", features = ["full"] }
jemallocator = "0.3.2"
tokio = { version = "1.14.0", features = ["full"] }
utils = { path = "../utils" }

[features]
